@@ -2770,7 +2770,7 @@ insert_exec_ok (const char *action,
 {
   int start, end;               /* Indexes in ARGV of start & end of cmd. */
   int i;                        /* Index into cmd args */
-  int saw_braces;               /* True if previous arg was '{}'. */
+  bool prev_was_braces_only;    /* Previous arg was '{}' (not e.g. 'Q' or '{}x'). */
   bool allow_plus;              /* True if + is a valid terminator */
   int brace_count;              /* Number of instances of {}. */
   const char *brace_arg;        /* Which arg did {} appear in? */
@@ -2827,28 +2827,35 @@ insert_exec_ok (const char *action,
    * Also figure out if the command is terminated by ";" or by "+".
    */
   start = *arg_ptr;
-  for (end = start, saw_braces=0, brace_count=0, brace_arg=NULL;
+  for (end = start, prev_was_braces_only=false, brace_count=0, brace_arg=NULL;
        (argv[end] != NULL)
        && ((argv[end][0] != ';') || (argv[end][1] != '\0'));
        end++)
     {
       /* For -exec and -execdir, "{} +" can terminate the command. */
-      if ( allow_plus
-           && argv[end][0] == '+' && argv[end][1] == 0
-           && saw_braces)
+      if (allow_plus && prev_was_braces_only
+           && argv[end][0] == '+' && argv[end][1] == 0)
         {
           our_pred->args.exec_vec.multiple = 1;
           break;
         }
 
-      saw_braces = 0;
+      prev_was_braces_only = false;
       if (mbsstr (argv[end], "{}"))
         {
-          saw_braces = 1;
+          if (0 == strcmp(argv[end], "{}"))
+            {
+              /* Savannah bug 66365: + only terminates the predicate
+               * immediately after an argument which is exactly, "{}".
+               * However, the "{}" in "x{}" should get expanded for
+               * the ";" case.
+               */
+              prev_was_braces_only = true;
+            }
           brace_arg = argv[end];
           ++brace_count;
 
-          if (0 == end && (func == pred_execdir || func == pred_okdir))
+          if (start == end && (func == pred_execdir || func == pred_okdir))
             {
               /* The POSIX standard says that {} replacement should
                * occur even in the utility name.  This is insecure
